Fixed issue in path for linus/osx operating systems